--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-  border: 1px red solid;
+  border: 1px solid red;
 }
 
 body {
@@ -9,6 +9,8 @@ body {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   color: #f9fafb;
+  height: 100vh;
+  padding: 0;
 }
 
 .header {
@@ -17,6 +19,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-left: 20px;
 }
 
 ul {
@@ -25,6 +28,7 @@ ul {
   margin: 0;
   display: flex;
   justify-content: flex-end;
+  font-size: 18px;
 }
 
 .logo {
@@ -42,16 +46,39 @@ ul {
 .hero {
   background-color: #1f2937;
   flex: 1;
+  display: flex;
+  padding: 50px;
+  gap: 20px;
+}
+
+.hero .text {
+  flex: 1;
+}
+
+.hero img {
+  flex: 1 0 auto;
+  width: 200px;
+  height: auto;
 }
 
 .info {
-  background-color: #e5e7eb;
+  background-color: #ffffff;
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  color: #1f2937;
+}
+
+.container {
+  display: flex;
+  gap: 20px;
+  justify-content: space-around;
 }
 
 .quote {
   background-color: #e5e7eb;
   flex: 1;
+  color: #1f2937;
 }
 
 .action {
@@ -63,5 +90,13 @@ ul {
   background-color: #1f2937;
   justify-content: center;
   align-items: center;
+  flex: 0 0 40px;
+  display: flex;
+}
+
+.card img {
+  border: 3px solid #3b82f6;
+  border-radius: 10%;
   flex: 1;
+  max-height: 150px;
 }
