--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 20px;
+  padding: 0 5vw;
 }
 
 ul {
@@ -47,12 +47,16 @@ ul {
   background-color: #1f2937;
   flex: 1;
   display: flex;
-  padding: 50px;
+  justify-content: space-between;
+  padding: 5vw;
   gap: 20px;
 }
 
 .hero .text {
-  flex: 1;
+  flex: 1 2 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 .hero h1 {
   font-size: 48px;
@@ -121,20 +125,24 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 5vh 20vw;
 }
 
 .quote p {
   font-size: 36px;
   font-style: italic;
-  font-weight: lighter;
+  font-weight: -900;
 }
 .quote h3 {
   font-size: 24px;
+  text-align: left;
 }
 
 .action {
   background-color: #3b82f6;
   flex: 1;
+  display: flex;
+  margin: 5vw;
 }
 
 .footer {
