--- a/style.css
+++ b/style.css
@@ -93,6 +93,9 @@ button {
   flex-direction: column;
   color: #1f2937;
   justify-content: center;
+  gap: 5vh;
+  padding: 5vh 10vw;
+  padding-bottom: 10vh;
 }
 
 .info h2 {
@@ -103,7 +106,7 @@ button {
 
 .container {
   display: flex;
-  gap: 20px;
+  gap: 40px;
   justify-content: center;
   flex-wrap: wrap;
 }
@@ -133,26 +136,32 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 5vh 20vw;
+  gap: 2.5vh;
+  padding: 10vh 20vw;
 }
 
 .quote p {
   font-size: 36px;
   font-style: italic;
-  font-weight: -900;
+  font-weight: 200;
 }
 .quote h3 {
   font-size: 24px;
-  text-align: left;
+  text-align: right;
 }
 
 .action {
   background-color: #3b82f6;
   flex: 1;
   display: flex;
+  justify-content: space-between;
   margin: 5vw;
-  width: 90vw;
-  height: 10vh;
+  padding: 5vh 5vw;
+  border-radius: 20px;
+}
+
+.action button {
+  border: 2px solid #e5e7eb;
 }
 
 .footer {
